--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  color: white;
+  background-color: rgb(16, 17, 16);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+nav{
+  height: 80px;
+  width: 100%;
+  padding: 0 20px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: rgb(58, 179, 94);
+  position: relative;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav::after{
+  content: "";
+  display: block;
+  height: 0.002rem;
+  bottom: 0;
+  width: 100%;
+  position: absolute;
+}
+nav h1{
+  font-size: 35px;
+}
+.todos-list{
+  background-color: red;
+  width: 90%;
+  margin: 30px auto;
+  padding: 15px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.todos{
+  display: flex;
+  position: relative;
+  padding: 3px 0;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todo-p{
+  margin-left: 10px;
+}
+.cross{
+  position: absolute;
+  right: 15px;
+  transform: rotate(45deg);
 }
